maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:88: error: value Sud is not a member of object plm.universe.Direction
    setDirection(Direction.Sud)
                           ^ShortestPathMaze:93: error: value Nord is not a member of object plm.universe.Direction
    setDirection(Direction.Nord)
                           ^ShortestPathMaze:98: error: value Est is not a member of object plm.universe.Direction
    setDirection(Direction.Est)
                           ^ShortestPathMaze:103: error: value Ouest is not a member of object plm.universe.Direction
    setDirection(Direction.Ouest)
                           ^